# btc_recovery

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_SUMMARY.md  GTX_1650_TI_SUPPORT_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  README.md  REPOSITORY_ENHANCEMENT_SUMMARY.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release.yml
config/: cluster.yaml  gpu.yaml  gtx_1650_ti_recovery.yaml  integrated_gpu_presets.yaml  recovery.yaml  wallet_dat_recovery.yaml
docs/: SETUP.md
examples/: basic_recovery.cpp  dictionary_attack.cpp  integrated_gpu_recovery.cpp  wallet_dat_recovery.cpp
include/gpu/: cuda_integrated.h  integrated_gpu.h
include/utils/: logger.h
include/wallets/: bitcoin_core_wallet.h  wallet_base.h
scripts/: build.sh  deploy_aws.sh
src/: main.cpp
src/gpu/: cuda_integrated.cpp  cuda_recovery.cu  integrated_gpu.cpp
src/utils/: logger.cpp
src/wallets/: bitcoin_core_wallet.cpp
tests/: CMakeLists.txt  test_config_manager.cpp
